# OpenGlPractice

./: .gitignore  Makefile.am  README.md  configure.ac
old_build/: Makefile
project/: display.cpp  display.h  main  main.cpp
src/: .vimrc  shader.cpp  shader.h
src/res/: basicShader.fs  basicShader.vs
